# -film_service_etl

./: README.md
postgres_to_es/: .dockerignore  .gitignore  Dockerfile  main.py  pyproject.toml
postgres_to_es/config/: settings.py
postgres_to_es/db_dump_example/: backup.sql
postgres_to_es/es_index/: filmwork_es_index.json  person_es_index.json
postgres_to_es/src/: backoff.py  elastic_loader.py  log_writer.py  models.py  postgres_extractor.py  sql_queries.py  state_storage.py
